<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FilmesFragment">



    <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="236dp"
                android:src="@drawable/x_men" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="8sp"
                android:text="@string/x_men_or"
                android:textColor="#000000"
                android:textSize="15sp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="236dp"
                android:src="@drawable/proposal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="8sp"
                android:text="@string/prop"
                android:textColor="#000000"
                android:textSize="15sp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="236dp"
                android:src="@drawable/green_lantern"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gl"
                android:textColor="#000000"
                android:textSize="15sp"
                android:lineSpacingExtra="8sp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"/>
            
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="236dp"
                android:src="@drawable/dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dp"
                android:textColor="#000000"
                android:textSize="15sp"
                android:lineSpacingExtra="8sp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="236dp"
                android:src="@drawable/hitman"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hit"
                android:textColor="#000000"
                android:textSize="15sp"
                android:lineSpacingExtra="8sp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"/>


        </LinearLayout>
    </ScrollView>


</LinearLayout>